Christiana : mise à jour partie admin et  mise à jour evenement,

--- a/Documents/NetBeansProjects/ecoBio/src/main/webapp/xhtml/pageAdmin.xhtml
+++ b/Documents/NetBeansProjects/ecoBio/src/main/webapp/xhtml/pageAdmin.xhtml
@@ -1,12 +1,198 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
-    <h:head>
-        <title>Facelet Title</title>
-    </h:head>
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:c="http://java.sun.com/jsp/jstl/core">
+
     <h:body>
-        PAGE ADMIN
+
+        <ui:composition template="/xhtml/Layout.xhtml">
+
+            <ui:define name="content">
+
+                <div class="container">
+
+                    <h4 id="h4RechercheParCritere">Administration</h4><hr></hr>
+
+                    <div class="panel-group" id="accordion">
+
+                        <!-- Etat-->
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">
+                                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">Etat</a>
+                                </h4>
+                            </div>
+                            <div id="collapseOne" class="panel-collapse collapse in">
+                                <div class="panel-body">
+                                    <div class="col-md-6">
+                                        <div class ="row">
+                                            <h:form>
+                                                <div class="col-md-2">
+                                                    <label>Nom : </label>
+                                                </div>
+                                                <div class="col-md-7">
+                                                    <h:inputText class="form-control" value="#{newEtat.nom}" />
+                                                </div>
+                                                <div class="col-md-3">
+                                                    <!-- TODO C : le gerer en ajax-->
+                                                    <h:commandButton class="btn btn-default" value="Ajouter" action="#{managerAdmin.createEtat(newEtat)}"/> 
+                                                </div>
+                                            </h:form>
+                                        </div>
+                                    </div>
+                                    <div id="traitseparation"/>
+                                    <div class="col-md-5">
+                                        <div class ="row">
+                                            <h:selectManyListbox value="#{managerAdmin.selectedEtat}" class="form-control">
+                                                <f:selectItems value="#{managerAdmin.selectedItemFindAllEtat()}"/>
+                                            </h:selectManyListbox>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Saison -->
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">
+                                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">Saison</a>
+                                </h4>
+                            </div>
+                            <div id="collapseTwo" class="panel-collapse collapse">
+                                <div class="panel-body">
+                                    <div class="col-md-6">
+                                        <div class ="row">
+                                            <h:form>
+                                                <div class="col-md-2">
+                                                    <label>Nom : </label>
+                                                </div>
+                                                <div class="col-md-7">
+                                                    <h:inputText class="form-control" value="#{newSaison.nom}" />
+                                                </div>
+                                                <div class="col-md-3">
+                                                    <h:commandButton class="btn btn-default" value="Ajouter" action="#{managerAdmin.createSaison(newSaison)}"/> 
+                                                </div> 
+                                            </h:form>
+                                        </div>
+                                    </div>
+                                    <div id="traitseparation"/>
+                                    <div class="col-md-5">
+                                        <div class ="row">
+                                            <h:selectOneListbox value="#{managerAdmin.selectedSaison}" class="form-control">
+                                                <f:selectItems value="#{managerAdmin.selectedItemFindAllSaison()}"/>
+                                            </h:selectOneListbox>
+                                        </div>
+                                    </div> 
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Type de produit -->    
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">
+                                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">Type de produit</a>
+                                </h4>
+                            </div>
+                            <div id="collapseThree" class="panel-collapse collapse">
+                                <div class="panel-body">
+                                    <div class="col-md-6">
+                                        <h:form>
+                                            <div class ="row">
+
+                                                <div class="col-md-2">
+                                                    <label>Nom : </label>
+                                                </div>
+                                                <div class="col-md-7">
+                                                    <h:inputText class="form-control" value="#{newTypeProduit.nom}" />
+                                                </div>
+                                                <div class="col-md-3">
+                                                    <h:commandButton class="btn btn-default" value="Ajouter" action="#{managerAdmin.createTypeProduit(newTypeProduit)}"/> 
+                                                </div>          
+                                            </div>
+                                            <br/>
+                                            <div class ="row">
+                                                <div class="col-md-2">
+                                                    <label>Saison : </label>
+                                                </div>
+                                                <div class="col-md-7">
+                                                    <h:selectManyListbox value="#{managerAdmin.selectedSaisonForType}" class="form-control">
+                                                        <f:selectItems value="#{managerAdmin.selectedItemFindAllSaison()}" />
+                                                    </h:selectManyListbox>
+                                                </div>
+                                            </div>
+                                        </h:form>
+                                    </div>
+                                    <div id="traitseparation"/>
+                                    <div class="col-md-5">
+                                        <div class ="row">
+                                            <h:selectOneListbox value="#{managerAdmin.selectedType}" class="form-control">
+                                                <f:selectItems value="#{managerAdmin.selectedItemFindAllType()}"/>
+                                            </h:selectOneListbox>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- User --> 
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">
+                                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseFor">Liste utilisateur</a>
+                                </h4>
+                            </div>
+                            <div id="collapseFor" class="panel-collapse collapse">
+                                <div class="panel-body">
+                                    <div class ="row">
+                                        <c:if test="#{managerAdmin.findAllUser().size()>0}">
+                                            <h:dataTable value="#{managerAdmin.findAllUser()}" var="user" cellspacing="0" width="100%" >
+                                                <h:column>
+                                                    <f:facet name="header">
+                                                        <h:outputText value="Nom" />
+                                                    </f:facet>
+                                                    <h:outputText value="#{user.nom}" />
+                                                </h:column>
+                                                <h:column>
+                                                    <f:facet name="header">
+                                                        <h:outputText value="Prénom" />
+                                                    </f:facet>
+                                                    <h:outputText value="#{user.prenom}" />
+                                                </h:column>
+                                                <h:column>
+                                                    <f:facet name="header">
+                                                        <h:outputText value="Email" />
+                                                    </f:facet>
+                                                    <h:outputText value="#{user.email}" />
+                                                </h:column>
+                                                <h:column>
+                                                    <f:facet name="header">
+                                                        <h:outputText value="Login" />
+                                                    </f:facet>
+                                                    <h:outputText value="#{user.login}" />
+                                                </h:column>
+                                            </h:dataTable>
+                                        </c:if>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <br/>        
+                </div><!-- END CONTAINER -->
+
+            </ui:define>
+
+        </ui:composition>
+
     </h:body>
+
 </html>
+
 
