--- a/Documents/NetBeansProjects/ecoBio/src/main/webapp/xhtml/pageCreerEvenement.xhtml
+++ b/Documents/NetBeansProjects/ecoBio/src/main/webapp/xhtml/pageCreerEvenement.xhtml
@@ -2,71 +2,51 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:p="http://primefaces.org/ui"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:f="http://java.sun.com/jsf/core">
-
-
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 
     <h:body>
 
         <ui:composition template="/xhtml/Layout.xhtml">
+
             <ui:define name="content">
+
                 <div class="container">
 
-                    <div id="pageVente">
+                    <div id="pageCreationEvenement">
 
                         <div id="tabs-1"><br></br>
-                            <h4 >Creer un evenement:</h4><br></br>
+
+                            <h4>Creer un evenement</h4>
 
                             <h:form>
+                                <h:outputText value="Titre :"/>
+                                <h:inputText class="form-control" value="#{newEvent.titre}" />
+                                <h:outputText value="Prix :"/>
+                                <h:inputText class="form-control" value="#{newEvent.prix}" />
+                                <h:outputText value="Nombre de participant :"/>
+                                <h:inputText class="form-control" value="#{newEvent.nbParticipant}" />
+                                <h:outputText value="Date de début :"/>
+                                <p:calendar value="#{newEvent.dateDebut}" id="popupButtonCal" showOn="button" /> 
+                                <h:outputText value="Date de fin :"/>
+                                <p:calendar value="#{newEvent.dateFin}" id="popupButtonCal2" showOn="button" /> 
+                                <h:outputText value="Description :"/>
+                                <h:inputTextarea class="form-control" rows="4" value="#{newEvent.description}" />
+                                <h:outputText value="Rue :"/>
+                                <h:inputText class="form-control" value="#{newEvent.rue}" />
+                                <h:outputText value="Adresse :"/>
+                                <h:inputText class="form-control" value="#{newEvent.adresse}" />
+                                <h:outputText value="Code postal :"/>
+                                <h:inputText class="form-control" value="#{newEvent.cp}" />
+                                <h:outputText value="Ville :"/>
+                                <h:inputText class="form-control" value="#{newEvent.ville}" /> 
 
-                                <table id="tableau">                                      
-                                    <tr>
-                                        <td id="tableauInfoPerso"><b>Descriptif</b></td>
-                                        <td id="tableauInfoPerso"><b>Lieu</b></td>
-                                    </tr>
-                                </table>
-                                <br></br>
-                                <table id="tableauEvenement">     
-                                    <tr>
-                                        <td id="tableauInfoPerso">
-                                            <h:form>
-                                                <h:outputText value="Titre: " />
-                                                <h:outputText value="" /><br></br><br></br>
-                                                <h:outputText value="Description: " />
-                                                <h:outputText value="" /><br></br><br></br>
-                                                <h:outputText value="Prix: " />
-                                                <h:outputText value="" /><br></br> <br></br> 
-                                                <h:outputText value="Nombre participant: " />
-                                                <h:outputText value="" /><br></br> <br></br> 
-                                                <h:outputText value="Date debut: " />
-                                                <h:outputText value="" /><br></br> <br></br> 
-                                                <h:outputText value="Date fin: " /><br></br> <br></br><br></br>     
-                                                <h:commandButton value="Créer l'évènement"/>
-                                            </h:form >
-
-                                        </td>
-                                    </tr>
-                                </table>
-                                <table id="tableauEvenement">
-                                    <tr>
-                                        <td id="tableauInfoPerso">
-                                            <h:form>
-                                                <h:outputText value="Rue: " />
-                                                <h:outputText value="" /><br></br><br></br>
-                                                <h:outputText value="Adresse: " />
-                                                <h:outputText value="" /><br></br> <br></br>
-                                                <h:outputText value="ville: " />
-                                            </h:form >
-
-                                        </td>
-                                    </tr>
-                                </table>
+                                <h:commandButton value="Créer l'évènement" action="#{managerEvenement.createEvent(newEvent)}"/>
 
                             </h:form>
                         </div>
-                    </div>                 
+                    </div>
                 </div>
             </ui:define>
         </ui:composition>
