--- a/Documents/NetBeansProjects/ecoBio/src/main/webapp/xhtml/Nav.xhtml
+++ b/Documents/NetBeansProjects/ecoBio/src/main/webapp/xhtml/Nav.xhtml
@@ -11,7 +11,31 @@
             <!-- topHeaderSection -->	
             <div class="topHeaderSection">		
                 <div class="header">	
-                    <div id ="panierLabel"> <h:outputLabel  value="#{managerUser.user.nom}" />  <img src="assets/custom/img/panier.png" alt="" /></div>
+                    <div id ="panierLabel"><h:form><h:outputLabel  value="#{managerUser.user.nom}" /> 
+                            <p:commandLink update="@form" action="cc" onclick= "dlgEspacePerso.show();" type="button" >
+                                <p:graphicImage  value="../assets/custom/img/panier.png"/>
+                            </p:commandLink>
+                        </h:form></div>
+                    <p:dialog  header="Panier" widgetVar="dlgPanier" modal="true" height="180" >
+                        <h:form>
+                            <div class ="row" style="margin-top:20px ">
+                                <div class="col-md-5">
+                                    <label>Login : </label>
+                                </div>
+                                <div class="col-md-7">
+                                    <h:inputText class="form-control" value="#{connectedUser.login}" />
+                                </div>
+                            </div><br/>
+                            <div class="row">
+                                <div class="col-md-5">
+                                    <label>Password : </label>
+                                </div>
+                                <div class="col-md-7">
+                                    <h:inputText class="form-control" value="#{connectedUser.password}" />
+                                </div>
+                            </div><br/>
+                            <h:commandButton action="#{managerUser.verifAuthentification(connectedUser)}" value="Se Connecter" styleClass="btn btnConnexion" /></h:form>
+                    </p:dialog>
                     <div class="container">
                         <div class="navbar-header">
                             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
